# SkyPredictor

./: .licenserc.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yaml  publish-docker.yaml
baseline/: calculate.py  fetcher.py  predict.py  query.py  result.py  scheduler.py
baseline/config/: config.yaml
config/: config.py  config.yaml
docs/: README.md  menu.yml
docs/en/concepts-and-designs/: overview.md
docs/en/setup/: overview.md
docs/en/setup/configuration/: config.md  override-settings.md
docs/en/setup/deployment/kubernetes/: readme.md
docs/en/setup/deployment/vm/: readme.md
proto/: baseline.proto  generate.py
server/: server.py
test/e2e/: client.py  requirements.txt
test/e2e/mock-oap/: server.py
